--- a/pmsb_web/conta/static/css/style.css
+++ b/pmsb_web/conta/static/css/style.css
@@ -14252,14 +14252,17 @@ body {
   float: center;
 }
 
-header{
-  background: url(../../../media/LOGO.jpg) no-repeat center;
-  background-size:cover;
-  height: 350px; 
-}
+
 
 .helptext {
   color: #73818f;
+}
+
+.fullscreen_bg {
+  background-size: cover;
+  background-position: 50% 50%;
+  background-image: url('http://cleancanvas.herokuapp.com/img/backgrounds/water.jpg');
+  background-repeat:repeat;
 }
 
 /*# sourceMappingURL=style.css.map */
