--- a/pmsb_web/conta/templates/dashboard/listardados.html
+++ b/pmsb_web/conta/templates/dashboard/listardados.html
@@ -10,6 +10,17 @@
                                 {% if Erro %}
                                 <p style="text-align: center; color: red;"> Ocorreu um erro !</p>
                                 {% endif %}
+                            {% if messages %}
+                            
+                            {% for message in messages %}
+                            <div class='text-muted' role='alert' >
+                                <center>{{ message }}</center>
+                            </div>
+                            {% endfor %}
+                                    
+                            {% endif %}
+
+
                             <div class='form-control'>Nome Completo: {{ request.user.first_name }} </div>
                             <div class='form-control'>Nome Projeto: {{ request.user.last_name }} </div>
                             <div class='form-control'>Email: {{ request.user.email }} </div>
@@ -19,6 +30,7 @@
                             <div class='form-control' id='phone_with_ddd_fixo' >Telefone celular:  <a class='phone_with_ddd -mask'> {{ request.user.telefone_celular }} </a> </div>
                             <br>
                             <a class="btn btn-warning " href="{% url 'user_edit' %}" > Atualizar Dados </a>
+                            <a class="btn btn-danger " href="{% url 'user_password' %}" > Atualizar Senha </a>
                             <a  href="{% url 'dashboard' %}"  class="btn btn-primary " style="float: right;" >Voltar</a>
                         </div>
                     </div>
