--- a/pmsb_web/conta/templates/dashboard/atualizar_password.html
+++ b/pmsb_web/conta/templates/dashboard/atualizar_password.html
@@ -3,7 +3,7 @@
   {% csrf_token %}
   <div class="container" style="margin-top: 10px">
     <div class="row justify-content-center">
-      <div class="col-md-10">
+      <div class="col-md-6">
         <div class="card mx-4">
           <div class="card-body p-4">
             <h1 style="text-align: center;">Atualizar a Senha</h1>
@@ -28,12 +28,13 @@
             </div>
             {% endfor %}
             <br>
-            <button type="submit" class="btn btn-warning ">Atualizar Dados</button>
-            <button href="{% url 'dashboard' %}" type="submit" class="btn btn-primary " style="float: right;">Voltar</button>
+            <button type="submit" class="btn btn-warning ">Atualizar senha</button>
+            <a class="btn btn-primary " href="{% url 'user_dados'  %}" style="float: right;">Voltar</a>
           </div>
         </div>
       </div>
     </div>
   </div>
 </form>
+
 {% endblock %}
