--- a/pmsb_web/conta/templates/dashboard/listardados.html
+++ b/pmsb_web/conta/templates/dashboard/listardados.html
@@ -6,6 +6,7 @@
                     <div class="card mx-4">
                         <div class="card-body p-4">
                             <h1 style="text-align: center;">Conta</h1>
+                            <hr>
                             <p class="text-muted" style="text-align: center;"></p>
                                 {% if Erro %}
                                 <p style="text-align: center; color: red;"> Ocorreu um erro !</p>
@@ -30,6 +31,7 @@
                             <div class='form-control' id='phone_with_ddd_fixo' >Telefone celular:  <a class='phone_with_ddd -mask'> {{ request.user.telefone_celular }} </a> </div>
                             <br>
                             <a class="btn btn-warning " href="{% url 'user_edit' %}" > Atualizar Dados </a>
+                            {% comment %} <a class="btn btn-warning " href="{% url 'perfil_edit' %}" > Atualizar Perfil </a> {% endcomment %}
                             <a class="btn btn-danger " href="{% url 'user_password' %}" > Atualizar Senha </a>
                             <a  href="{% url 'dashboard' %}"  class="btn btn-primary " style="float: right;" >Voltar</a>
                         </div>
